# overkilled-todo-app

./: .gitignore  README.md
backend/bounded_contexts/accounts_context/: docker-compose.yaml  example.env  pyproject.toml
backend/bounded_contexts/accounts_context/accounts_context/: config.py
backend/bounded_contexts/accounts_context/accounts_context/alembic/: env.py
backend/bounded_contexts/accounts_context/accounts_context/alembic/versions/: 153aacae3f2a_made_email_field_required.py  161201bc4b86_added_user_model.py
backend/bounded_contexts/accounts_context/accounts_context/api_svc/: Dockerfile  dependencies.py  main.py  run.py
backend/bounded_contexts/accounts_context/accounts_context/api_svc/routers/: auth.py  token.py  users.py
backend/bounded_contexts/accounts_context/accounts_context/db/: connection.py  models.py
backend/bounded_contexts/accounts_context/accounts_context/utils/events/: helpers.py  message.py  queues.py
backend/bounded_contexts/teams_context/: docker-compose.yaml  example.db.env  example.env  pyproject.toml
backend/bounded_contexts/teams_context/teams_context/: config.py
backend/bounded_contexts/teams_context/teams_context/alembic/: env.py
backend/bounded_contexts/teams_context/teams_context/alembic/versions/: a00601609d08_added_user_team_and_member_models.py
backend/bounded_contexts/teams_context/teams_context/api_svc/: .dockerignore  Dockerfile  dependencies.py  main.py  run.py
backend/bounded_contexts/teams_context/teams_context/api_svc/routers/: teams.py  users.py
backend/bounded_contexts/teams_context/teams_context/db/: connection.py  models.py
backend/bounded_contexts/teams_context/teams_context/event_consumer_svc/: Dockerfile  main.py
(+53 files in other folders)
